--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -154,6 +154,7 @@ jobs:
     name: Report
     runs-on: ubuntu-latest
     needs: [javascript, docker, url]
+    if: always()
     steps:
       - name: Checkout
         uses: actions/checkout@v3
