--- a/implementations/hotchocolate/Dockerfile
+++ b/implementations/hotchocolate/Dockerfile
@@ -1,7 +1,7 @@
-FROM mcr.microsoft.com/dotnet/sdk:7.0
+FROM mcr.microsoft.com/dotnet/sdk:8.0
 
 WORKDIR /server
 
 RUN dotnet new web
-RUN dotnet add package HotChocolate.AspNetCore --version 13.0.0-preview.80
+RUN dotnet add package HotChocolate.AspNetCore --version 14.0.0
 COPY Program.cs .
