ci: fix artifact uploads and downloads

--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -137,7 +137,7 @@ jobs:
       - name: Upload audit report
         uses: actions/upload-artifact@v4
         with:
-          name: audit-reports
+          name: audit-report-${{ matrix.workspace.name }}
           # > If multiple paths are provided as input, the least common ancestor of all the search paths will be used as the root directory of the artifact.
           # https://github.com/actions/upload-artifact#upload-using-multiple-paths-and-exclusions
           #
@@ -163,7 +163,8 @@ jobs:
       - name: Download audit reports
         uses: actions/download-artifact@v4
         with:
-          name: audit-reports
+          pattern: audit-report-*
+          merge-multiple: true
       - name: Render servers table
         run: node scripts/render-servers-table.mjs
       - name: Diff
